src/test/ui/type-alias-impl-trait/nested-tait-inference.stderr
error[E0277]: the trait bound `(): Foo<FooX>` is not satisfied
  --> $DIR/nested-tait-inference.rs:12:13
   |
LL | fn foo() -> impl Foo<FooX> {
   |             ^^^^^^^^^^^^^^ the trait `Foo<FooX>` is not implemented for `()`
   |
   = help: the following implementations were found:
             <() as Foo<()>>

error[E0277]: the trait bound `(): Foo<FooX>` is not satisfied
  --> $DIR/nested-tait-inference.rs:12:28
   |
LL |   fn foo() -> impl Foo<FooX> {
   |  ____________________________^
LL | |
LL | |
LL | |     // FIXME(type-alias-impl-trait): We could probably make this work.
LL | |     ()
LL | | }
   | |_^ the trait `Foo<FooX>` is not implemented for `()`
   |
   = help: the following implementations were found:
             <() as Foo<()>>

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
